# sealhook

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: main.rs
tests/: sealhook_cli.rs
