[package]
name = "sealhook"
version = "0.1.1"
edition = "2021"
description = "Git-hook utility for syncing local plaintext secrets with age-encrypted Git artifacts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ajchemist/sealhook"
homepage = "https://github.com/ajchemist/sealhook"
readme = "README.md"
keywords = ["age", "git-hooks", "secrets", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
filetime = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
